--- a/empleos/src/main/resources/templates/Usuarios/listUsuarios.html
+++ b/empleos/src/main/resources/templates/Usuarios/listUsuarios.html
@@ -43,8 +43,8 @@
                   <td th:text="${usuario.nombre}"></td>
                   <td th:text="${usuario.username}"></td>                  
                   <td th:text="${usuario.email}"></td>
-                  <td th:text="${usuario.estado}"></td>
-                  
+                  <td th:if="${usuario.estado} ==1">ACTIVO</td>
+                   <td th:if="${usuario.estado} !=1">BLOQUEADO</td>
                   <td>                    
                     <a th:href="@{/usuarios/delete/{id} (id=${usuario.id}) }" onclick="return confirm('¿Estas seguro?')" class="btn btn-danger btn-sm" role="button" title="Eliminar el registro."><i class="fas fa-trash" aria-hidden="true"></i></a>
                     <a href="#" onclick="return confirm('¿Quiere bloquear el acceso al usuario?')" class="btn btn-warning btn-sm" role="button" title="Bloquear el acceso al sistema para este usuario."><i class="fas fa-lock" aria-hidden="true"></i></a>	
