--- a/empleos/src/main/resources/templates/fragments/menu.html
+++ b/empleos/src/main/resources/templates/fragments/menu.html
@@ -20,8 +20,15 @@
               <a class="nav-link" th:href="@{/usuarios/index}">Usuarios</a>
             </li> 
           </ul>  
+          <div  sec:authorize="isAnonymous()">
           <a class="btn btn-primary" href="/index">Ingresar</a>&nbsp;
           <a class="btn btn-primary" th:href="@{/signup}">Registrarse</a>
-               <a class="btn btn-primary" th:href="@{/logout}">Salir</a>
+          </div>
+          <span th:if="${session.usuario !=null}" class="text-light" 
+                th:text="'Bienvenido ' + ${session.usuario.nombre}"></span>&nbsp;
+                
+          <div  sec:authorize="isAuthenticated()">   
+          <a class="btn btn-danger" th:href="@{/logout}">Salir</a>
+          </div>
         </div>
       </nav>
