--- a/empleos/src/main/resources/templates/fragments/menu.html
+++ b/empleos/src/main/resources/templates/fragments/menu.html
@@ -10,15 +10,21 @@
             <li class="nav-item">
               <a class="nav-link active" href="/">Inicio</a>
             </li>
+             <li class="nav-item" sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
+     		 <a class="nav-link" th:href="@{/solicitudes/indexPaginate}">Solicitudes</a>
+	   		</li>
             <li class="nav-item"   sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
               <a class="nav-link" th:href="@{/vacantes/indexPaginate}">Vacantes</a>
             </li>
             <li class="nav-item"   sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
               <a class="nav-link" th:href="@{/categorias/indexPaginate}">Categorias</a>
             </li>          
-                   <li class="nav-item"   sec:authorize="hasAnyAuthority('ADMINISTRADOR')">
+            <li class="nav-item"   sec:authorize="hasAnyAuthority('ADMINISTRADOR')">
               <a class="nav-link" th:href="@{/usuarios/index}">Usuarios</a>
             </li> 
+             <li class="nav-item">
+        		<a class="nav-link" th:href="@{/about}">Acerca</a>
+      		</li> 
           </ul>  
           <div  sec:authorize="isAnonymous()">
           <a class="btn btn-primary" href="/index">Ingresar</a>&nbsp;
